--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1 class="title">HELLO</h1>
-    <h2 id="">welcome</h2>
+    <h2 id="head">welcome</h2>
   
     <p class="title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, deserunt? A animi reprehenderit vitae ipsam
         fugiat ex accusantium quas voluptate id totam praesentium eveniet repudiandae distinctio veniam enim, quisquam
